# Tauri-app

./: package-lock.json  package.json
rust-desktop-app/: package-lock.json  package.json
rust-desktop-app/src/: App.vue  Timerapp.vue
rust-desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
rust-desktop-app/src-tauri/src/: main.rs
rust-desktop-app/src/components/: Factorial.vue  Rangeadd.vue  Showtime.vue  posttesting.vue
