[package]
name = "rust-desktop-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4.4"
num-traits = "0.2.14"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.36.0", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
